fix spacing

--- a/src/components/EmailForm/EmailForm.scss
+++ b/src/components/EmailForm/EmailForm.scss
@@ -43,7 +43,7 @@
 
         @include desktop {
             padding: 0 0 3rem;
-            max-width: 1002px;
+            max-width: 1030px;
         }
     }
 
